<resources>
    <string name="app_name">ePills</string>
    <string name="title_activity_clock">Medicine Clock</string>
    <string name="action_settings">Settings</string>
    <string name="sync_google_calendar">Sync with Google Calendar</string>
    <string name="title_activity_addPill">Add a Medicine</string>
    <string name="medicin_name">Name of Medicine</string>
    <string name="medicin_description">Description</string>
    <string name="autofill_button">Auto-Fill</string>
    <string name="description_helper">Press Auto-fill to download description data.</string>
    <string name="empty_Name">Medicine´s name must not be empty</string>

    <!-- Stepper  -->
    <string name="time_picker_title">Time</string>
    <string name="pick_time">Choose Time</string>
    <string name="single_intake">Take medicine once</string>
    <string name="multiple_intake">Repeat intake several times</string>
    <string name="no_days_Error">Choose at least one day</string>
    <string name="timeactivity_title">Set intake for:</string>

    <string name="startDate_Label">Start Date</string>
    <string name="repetition_Label">Repetition</string>
    <string name="time_label">Time</string>
    <string name="quantity_label">Quantity</string>

    <string name="startDate_descr">Choose the first day of the intake</string>
    <string name="repetition_descr">How often repeats the intake?</string>
    <string name="time_descr">At what time do you take the medicine?</string>
    <string name="quantity_descr">How much do you take in?</string>
    <string name="rep_onlyOnce">Only once</string>
    <string name="rep_severalTimesDescr">Several Times</string>
    <string name="end_of_repition">End of Repition</string>
    <string name="end_after_startDateError">Please choose an end date after the start date!</string>
    <string name="pill_added_success">Medicine added successfully</string>
    <string name="dialog_title">Do you wish....</string>

    <!-- PillBox -->
    <string name="medicinBox_Title">Medicine Box</string>
    <string name="empty_description">No description</string>
    <string name="delete_button">delete</string>

    <string name="add_medicine">New medicine</string>
    <string name="no_pills_found">You don\'t have any pills yet, please add them :)</string>
    <string name="no_pills_today">You don\'t have any pill to take today :)</string>

    <string name="pill_deleted_success">Pill deleted successfully</string>
    <string name="pill_edited_success">Pill edited successfully</string>

    <string name="pill_info_card">Take %1$s pill(s) at %2$s:%3$s</string>

    <!-- Notification -->
    <string name="channel_name">Pill Reminder Channel</string>
    <string name="channel_description">This is the notification channel of ePills</string>


    <string name="news_image_message">From where do you want to obtain the image?</string>
    <string name="news_image_camera">Camera</string>
    <string name="news_image_gallery">Gallery</string>
    <string name="warning_modal_title">Change image</string>

    <string name="alarm">Alarm</string>
    <string name="sync_google_calendar_loader">Syncing with Google Calendar...</string>
    <string name="sync_success">Synchronized with Google Calendar</string>
    <string name="delete_success">Intake deleted successfully</string>
</resources>
